tests-system/checks-6/output
true, """this
      ^^^^^^^ checks-6/foo.rsl:6: error: error message must not contain a newline
Processed 1 model(s), 0 check(s) and 0 requirement file(s) and found 1 error(s)
